cabal-version: 2.0

name: stahl-bootstrap
version: 0.1.0.0
synopsis: (The bootstrap compiler for) a dependently typed language with algebraic effects.
homepage: https://remexre.xyz/stahl
bug-reports: https://github.com/remexre/stahl_bootstrap/issues
author: Nathan Ringo <remexre@gmail.com>
category: Language
build-type: Simple
extra-source-files: LICENSE-APACHE, LICENSE-MIT, README.md

library
  exposed-modules:
  build-depends:
      base >=4.11 && <5.0
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2

executable stahl-bootstrap
  main-is: Main.hs
  build-depends:
      base >=4.11 && <5.0
    , stahl-bootstrap
  hs-source-dirs: app
  default-language: Haskell2010
  ghc-options: -Wall -O2 -static -threaded
  cc-options: -static
  ld-options: -static -pthread

test-suite tests
  type: exitcode-stdio-1.0
  main-is: tests/Main.hs
  build-depends:
      base >=4.11 && <5.0
    , stahl-bootstrap
    , tasty                  ^>=1.2.3
    , tasty-expected-failure ^>=0.11.1.1
    , tasty-hunit            ^>=0.10.0.2
    , tasty-quickcheck       ^>=0.10.1
  default-language: Haskell2010
  ghc-options: -fprof-auto -O2 -rtsopts -Wall -Werror
